[project]
name = "pcap-storyteller"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chart-studio>=1.1.0",
    "flask>=3.1.3",
    "folium>=0.20.0",
    "geoip2>=5.2.0",
    "maxminddb>=3.1.1",
    "python-docx>=1.2.0",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "scapy>=2.7.0",
    "scapy-http>=1.8.2",
    "setuptools>=82.0.1",
]
